--- a/Pixi/Pixi.csproj
+++ b/Pixi/Pixi.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Version>0.3.0</Version>
+    <Version>0.4.0</Version>
     <Authors>NGnius</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://git.exmods.org/NGnius/Pixi</PackageProjectUrl>
@@ -807,12 +807,17 @@
     <Reference Include="GamecraftModdingAPI">
       <HintPath>..\..\ref\Plugins\GamecraftModdingAPI.dll</HintPath>
     </Reference>
+    <Reference Include="GamecraftModdingAPI">
+      <HintPath>..\..\ref\Plugins\GamecraftModdingAPI.dll</HintPath>
+    </Reference>
   </ItemGroup>
 <!--End Dependencies-->
   <ItemGroup>
     <None Remove="cubes-id.json" />
+    <None Remove="blueprints.json" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="cubes-id.json" />
+    <EmbeddedResource Include="blueprints.json" />
   </ItemGroup>
 </Project>
